<resources>
    <string name="app_name">KotlinApp</string>

    <string name="navigation_drawer_open">打开drawer</string>
    <string name="navigation_drawer_close">关闭drawer</string>

    <string name="title_login">登 陆</string>
    <string name="username_login">手机号/用户名</string>
    <string name="password_login">密 码</string>
    <string name="action_login_short">登陆</string>
    <string name="username_not_empty">手机号或者用户名不能为空</string>
    <string name="pwd_not_empty">密码不能为空并且长度大于4</string>

    <string name="title_register">注 册</string>
    <string name="action_register_short">注册</string>
    <string name="password_repeat">请再输入一遍密码</string>
    <string name="register_tips">还没有账户？ 注册一个吧</string>

    <string name="loading">加载中 ...</string>

    <!-- memu -->
    <string name="menu_collect">收藏</string>
    <string name="menu_night">夜间模式</string>
    <string name="menu_setting">设置</string>
    <string name="menu_logout">登出</string>
    
    <!-- bottom navigation -->
    <string name="bottom_navi_home">首页</string>
    <string name="bottom_navi_knowledge">知识体系</string>
    <string name="bottom_navi_subscription">公众号</string>
    <string name="bottom_navi_guide">导航</string>
    <string name="bottom_navi_project">项目</string>

    <!-- Home 文章 列表-->
    <string name="article_top">置顶</string>
    <string name="article_new">新</string>

    
    <!-- behaview -->
    <string name="floating_action_behavior">com.ztl.kotlin.widget.behavior.FloatButtonBehavior</string>
    <string name="bottom_navigation_behavior">com.ztl.kotlin.widget.behavior.BottomNaviBehavior</string>
</resources>
